--- a/environment.yml
+++ b/environment.yml
@@ -5,6 +5,7 @@ channels:
 dependencies:
   - ros-humble-ros-base 
   - ros-humble-ros-testing
+  - ros-humble-test-msgs
   # to match the CMake version in ubuntu:jammy
   # rosidl_generator_py_generate_interfaces.cmake(https://github.com/ros2/rosidl_python/blob/humble/rosidl_generator_py/cmake/rosidl_generator_py_generate_interfaces.cmake)
   # will raise warning after cmake version 3.27
@@ -12,3 +13,10 @@ dependencies:
   - pkg-config
   - ninja
   - colcon-common-extensions
+  #Subsequent versions are not compatible with colcon, see this issue (https://github.com/pypa/setuptools/issues/4498) for details.
+  - setuptools<=70.0.0
+  - pip
+  - pip:
+    - PyQt6==6.5.3
+    # PyQt6 does not pin the version of PyQt6-Qt6, which will cause DLL import error, so we manually do it here.
+    - PyQt6-Qt6==6.5.3
