--- a/.github/workflows/build-package-windows.yml
+++ b/.github/workflows/build-package-windows.yml
@@ -66,9 +66,9 @@ jobs:
       - name: install micromamba
         # The windows-2019 comes with miniconda installed, which does not have mamba (which is faster).
         # We use micromamba since it is small, fast and self-contained.
-        uses: mamba-org/setup-micromamba@v1.8.0
+        uses: mamba-org/setup-micromamba@v1.9.0
         with:
-          environment-file: environment.yml
+          environment-file: environment.yaml
           cache-environment: true
           init-shell: none
 
